tests/computed_getters_setters/computed_getters_setters.exp
Error: computed_getters_setters.js:6
  6:   get ['d']() { return 'foo'; },
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ computed getters and setters are not yet supported

Error: computed_getters_setters.js:7
  7:   set ['d'](x: number) {},
       ^^^^^^^^^^^^^^^^^^^^^^^ computed getters and setters are not yet supported

Error: computed_getters_setters.js:13
 13:   get ['d']() { return 'foo'; }
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ computed property keys not supported

Error: computed_getters_setters.js:14
 14:   set ['d'](x: number) {}
       ^^^^^^^^^^^^^^^^^^^^^^^ computed property keys not supported


Found 4 errors
